# meDAW-gui

./: .gitignore  CMakeLists.txt  dependencies.sh
include/: pch.hpp
include/core/: color.hpp  drawable.hpp  event.hpp  graphics.hpp  texture.hpp
include/gui/: editor.hpp  gui.hpp  palette.hpp  shapes.hpp  widget.hpp
medawgui/include/: camera.hpp  color.hpp  drawable.hpp  font.hpp  glyph.hpp  graphics.hpp  input.hpp  pch.hpp  renderTexture.hpp  shader.hpp  sprite.hpp  text.hpp  texture.hpp
medawgui/include/core/: drawable.hpp  event.hpp  font.hpp  graphics.hpp  input.hpp  renderTexture.hpp  sprite.hpp  text.hpp  texture.hpp
medawgui/include/gui/: editor.hpp  gui.hpp  palette.hpp  shapes.hpp
medawgui/include/widget/: button.hpp
medawgui/src/: camera.cpp  color.cpp  drawable.cpp  font.cpp  graphics.cpp  input.cpp  renderTexture.cpp  shader.cpp  sprite.cpp  text.cpp  texture.cpp
medawgui/src/core/: drawable.cpp  event.cpp  graphics.cpp  input.cpp  renderTexture.cpp  shader.cpp
medawgui/src/gui/: editor.cpp  gui.cpp  shapes.cpp
medawgui/src/widget/: button.cpp
shader/: texture.fs  texture.vs
src/core/: camera.cpp  event.cpp  font.cpp  graphics.cpp  shader.cpp  sprite.cpp  text.cpp  texture.cpp
src/gui/: editor.cpp  main.cpp  shapes.cpp  widget.cpp
test/src/: main.cpp
